--- a/css/style.css
+++ b/css/style.css
@@ -28,3 +28,56 @@ body {
 .jumbotron p {
     color: white;
 }
+
+
+.grid {
+    display: block;
+}
+
+.grid .content-wrapper {
+    width: 100%;
+    height: 208px;
+    position: relative;
+
+
+}
+
+.grid .content-wrapper .img-wrapper {
+    width: 100%;
+
+
+}
+
+.grid .content-wrapper .img-wrapper .bg-gradient {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    top: 0;
+    left: 0;
+    background: rgb(2, 0, 36);
+    background: linear-gradient(180deg, rgba(2, 0, 36, 0) 0%, rgba(196, 196, 196, 1) 100%);
+}
+
+.grid .content-wrapper .img-wrapper img {
+    width: 100%;
+}
+
+.grid .content-wrapper .text-wrapper {
+    position: absolute;
+    bottom: 20px;
+    left: 10%;
+}
+
+.grid .content-wrapper .text-wrapper:hover i {
+    margin-left: 15px;
+}
+
+.grid .content-wrapper .text-wrapper p {
+    color: #091930;
+    font-weight: 500;
+}
+
+.grid .content-wrapper .text-wrapper i {
+    margin-left: 5px;
+    transition: .5s ease;
+}
