--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,11 @@ body {
     font-family: 'Poppins' !important;
 }
 
+section h2 {
+    font-size: 20px;
+    font-weight: 600;
+}
+
 .container {
     width: 90%;
 }
@@ -36,16 +41,17 @@ body {
 
 .grid .content-wrapper {
     width: 100%;
-    height: 208px;
+    height: 230px;
+    max-height: 240px;
     position: relative;
-
-
 }
+
+
 
 .grid .content-wrapper .img-wrapper {
     width: 100%;
-
-
+    height: 100%;
+    overflow: hidden;
 }
 
 .grid .content-wrapper .img-wrapper .bg-gradient {
@@ -56,20 +62,34 @@ body {
     left: 0;
     background: rgb(2, 0, 36);
     background: linear-gradient(180deg, rgba(2, 0, 36, 0) 0%, rgba(196, 196, 196, 1) 100%);
+    z-index: 299;
 }
+
+
 
 .grid .content-wrapper .img-wrapper img {
     width: 100%;
+    transition: .8s ease;
+
 }
 
 .grid .content-wrapper .text-wrapper {
     position: absolute;
     bottom: 20px;
     left: 10%;
+    z-index: 300;
+}
+
+.grid .content-wrapper .text-wrapper:hover {
+    cursor: pointer;
 }
 
 .grid .content-wrapper .text-wrapper:hover i {
     margin-left: 15px;
+}
+
+.img-wrapper:hover img {
+    transform: scale(1.1);
 }
 
 .grid .content-wrapper .text-wrapper p {
@@ -80,4 +100,69 @@ body {
 .grid .content-wrapper .text-wrapper i {
     margin-left: 5px;
     transition: .5s ease;
+}
+
+/* Tablet Version */
+@media (min-width: 768px) {
+
+    .grid {
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        width: 100%;
+    }
+
+
+
+
+
+
+
+
+
+
+}
+
+
+/* Desktop Only */
+@media (min-width: 998px) {
+
+    .grid {
+        grid-template-columns: repeat(3, 1fr);
+
+    }
+
+    #ds {
+        grid-row: 1/3;
+        height: 450px;
+
+
+    }
+
+    #ds .img-wrapper {
+        height: 460px;
+        overflow: hidden;
+    }
+
+    #ds .img-wrapper .bg-gradient {
+        height: 460px;
+    }
+
+    #ds .img-wrapper img {
+        min-width: 400px;
+        width: 700px;
+        height: 490px;
+    }
+
+    #ds .text-wrapper {
+        transform: translateY(220px);
+
+    }
+
+    #ml {
+        grid-row: 2;
+        grid-column: 2/4;
+    }
+
+
+
 }
