--- a/css/style.css
+++ b/css/style.css
@@ -1,18 +1,24 @@
+/* General Style */
 body {
     background: #091930;
     color: #DFDFDF;
     font-family: 'Poppins' !important;
-}
-
-section h2 {
-    font-size: 20px;
-    font-weight: 600;
+    overflow-x: hidden;
 }
 
 .container {
     width: 90%;
 }
 
+
+/* Titles */
+
+section h2 {
+    font-size: 20px;
+    font-weight: 600;
+}
+
+/* Jumbotron */
 .jumbotron {
     background: url(../img/alvaro-reyes-KhmfoQEindg-unsplash.jpg) no-repeat;
     background-size: cover;
@@ -34,6 +40,9 @@ section h2 {
     color: white;
 }
 
+/* Jumbotron */
+
+/* List of Courses */
 
 .grid {
     display: block;
@@ -102,17 +111,140 @@ section h2 {
     transition: .5s ease;
 }
 
+/* List of Courses */
+
+/* Footer */
+
+.divider {
+    margin-top: 50px;
+    width: 100%;
+    height: auto;
+    margin-bottom: -5px;
+}
+
+.divider-wrapper {
+    width: 100%;
+    overflow: hidden;
+}
+
+.divider-wrapper img {
+    width: 100%;
+}
+
+footer {
+
+    background: #081527;
+    width: 100%;
+    height: auto;
+    padding-bottom: 30px !important;
+
+
+}
+
+footer .row {
+    padding-top: 40px;
+
+}
+
+footer .row h3 {
+    font-weight: 600;
+    font-size: 4vh;
+}
+
+footer .row h5 {
+    font-weight: 500;
+    font-size: 3vh;
+}
+
+footer .row p {
+    margin-bottom: 30px;
+    font-size: 2.5vh;
+    font-weight: 400;
+}
+
+footer .row ul li {
+    margin-bottom: 10px;
+}
+
+footer .row .links ul li a {
+    color: #DFDFDF;
+    font-weight: 400;
+}
+
+footer .social-media {
+    margin-top: 40px;
+}
+
+footer .social-media li {
+    display: inline-block;
+    margin-right: 5px;
+}
+
+footer .copyright p {
+    font-size: 2vh;
+    margin-bottom: 5px;
+}
+
+footer .copyright .privacy a {
+
+    font-size: 2vh;
+    color: #DFDFDF;
+
+}
+
+/* Footer */
+
 /* Tablet Version */
 @media (min-width: 768px) {
 
+    .divider {
+        margin-top: 70px;
+    }
+
+
+    /* List of Courses */
     .grid {
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         width: 100%;
     }
 
+    footer .row h5 {
+        margin-top: 42px;
+    }
 
+    footer .row p {
+        line-height: 1.3;
+    }
 
+    footer .row .links ul {
+        display: flex;
+        justify-content: space-evenly;
+    }
+
+    footer .row .links ul li a {
+        font-weight: 500;
+    }
+
+    footer .row .social-media {
+        float: right;
+        margin-right: 35px;
+    }
+
+    footer .copyright {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+
+    }
+
+    footer .copyright p {
+        font-size: 2.3vh;
+    }
+
+    footer .copyright .privacy {
+        margin-right: 35px;
+    }
 
 
 
@@ -126,6 +258,13 @@ section h2 {
 /* Desktop Only */
 @media (min-width: 998px) {
 
+    .container {
+        width: 80%;
+        margin: 0 auto;
+
+    }
+
+    /* List of Courses */
     .grid {
         grid-template-columns: repeat(3, 1fr);
 
@@ -163,6 +302,11 @@ section h2 {
         grid-column: 2/4;
     }
 
+    /* List of Courses */
+
+    .divider {
+        margin-top: 70px;
+    }
 
 
 }
