--- a/css/style.css
+++ b/css/style.css
@@ -194,6 +194,121 @@ footer .copyright .privacy a {
 
 /* Footer */
 
+
+/* Sign In Page */
+
+.sign-in-nav .navbar-brand {
+    color: #DFDFDF !important;
+    font-weight: 600;
+}
+
+.sign-in-nav p {
+    display: none;
+}
+
+.sign-in-nav .sign-up-link {
+    background: none;
+    border: 1px solid #DFDFDF;
+    padding: 7px 15px;
+    border-radius: 20px;
+    color: #DFDFDF;
+    font-weight: 500;
+    transition: .4s all ease;
+    text-decoration: none;
+}
+
+.sign-in-nav .sign-up-link:hover {
+    background: #DFDFDF;
+    color: #091930;
+}
+
+.sign-in-grid {
+    width: 90%;
+    margin: 0 auto;
+}
+
+.sign-in-grid .img-sign-in {
+    width: 100%;
+    display: none;
+}
+
+
+
+.sign-in-grid .sign-in-wrapper {
+    text-align: center;
+}
+
+.sign-in-grid .sign-in-wrapper .back {
+    color: #DFDFDF;
+    margin-top: 170px;
+    display: block;
+}
+
+.sign-in-grid .sign-in-wrapper .login-title {
+    font-size: 3vh;
+    margin-top: 100px;
+    font-weight: 600;
+}
+
+.form-wrapper label {
+    color: #C4C4C4;
+}
+
+.form-wrapper .input-wrapper {
+    position: relative;
+}
+
+.form-wrapper .input-wrapper i {
+    position: absolute;
+    top: 25%;
+    left: 10%;
+    font-size: 14px;
+}
+
+.form-wrapper .input-wrapper input {
+    background: #081527;
+    border: none;
+    padding-top: 4px;
+    padding-bottom: 4px;
+    padding-left: 30px;
+
+    color: #DFDFDF;
+    width: 85%;
+}
+
+.form-wrapper .input-wrapper input:focus {
+    outline: rgba(196, 196, 196, 1);
+}
+
+
+
+.btn-sign-in {
+    background: #C4C4C4;
+    color: #081527;
+    border: none;
+    display: block;
+    width: 80%;
+    padding: 10px 14px;
+    border-radius: 20px;
+    margin: 0 auto;
+    font-weight: 600;
+    transition: .4s all ease;
+}
+
+.overlay .text {
+    display: none;
+}
+
+
+
+.btn-sign-in:hover {
+    background: none;
+    border: 1px solid #DFDFDF;
+    color: #DFDFDF;
+}
+
+/* Sign In Page */
+
 /* Tablet Version */
 @media (min-width: 768px) {
 
@@ -247,16 +362,134 @@ footer .copyright .privacy a {
     }
 
 
+    /* Sign In Page */
+    .sign-in-grid {
+        width: 100%;
+    }
+
+    .sign-in-nav {
+        width: 90%;
+        margin: 0 auto;
+    }
+
+    .sign-in-nav .sign-up-wrapper {
+        display: flex;
+        align-items: center;
+    }
+
+    .sign-in-nav .sign-up-wrapper p {
+        display: inline-block;
+        margin-right: 10px;
+    }
+
+    .sign-in-nav .navbar-brand {
+        font-size: 3vh;
+    }
 
 
 
 
+
+    .sign-in-grid .img-sign-in {
+        width: 100%;
+        margin-top: -70px;
+        display: block;
+
+        height: 300px;
+        overflow: hidden;
+        position: relative;
+        z-index: -20;
+
+    }
+
+    .sign-in-grid .sign-in-wrapper {
+        text-align: left;
+
+    }
+
+    .sign-in-grid .sign-in-wrapper .back {
+        text-align: center;
+        margin-top: 30px;
+    }
+
+    .sign-in-grid .sign-in-wrapper h1 {
+        text-align: center;
+    }
+
+    .form-wrapper .input-wrapper i {
+        position: absolute;
+        top: 25%;
+        left: 3%;
+        font-size: 18px;
+    }
+
+    .form-wrapper .input-wrapper input {
+        padding-left: 40px !important;
+    }
+
+
+
+    .overlay {
+        background: rgba(2, 0, 36, 0.4);
+        width: 100%;
+        height: 300px;
+        position: absolute;
+        top: 0;
+        left: 0;
+        z-index: 1;
+    }
+
+    .overlay .text {
+        display: none;
+    }
+
+
+
+
+
+    .form-wrapper {
+        /* border: 1px solid white; */
+        width: 60%;
+        margin: 0 auto;
+
+    }
+
+    .form-wrapper label {
+        color: #C4C4C4;
+        font-size: 2.3vh;
+        text-align: left !important;
+    }
+
+    .form-wrapper .input-wrapper {
+        position: relative;
+    }
+
+    .form-wrapper .input-wrapper input {
+
+        width: 100%;
+        padding: 10px 12px;
+    }
+
+    .btn-sign-in {
+        width: 60%;
+        padding: 13px 15px;
+    }
+
+
+
+    /* Sign In Page */
 
 }
 
 
+
+
+
 /* Desktop Only */
 @media (min-width: 998px) {
+    #sign-in {
+        overflow: hidden;
+    }
 
     .container {
         width: 80%;
@@ -307,6 +540,118 @@ footer .copyright .privacy a {
     .divider {
         margin-top: 70px;
     }
+
+    /* Sign In Page */
+    .sign-in-nav {
+        display: flex;
+        justify-content: space-between;
+    }
+
+    .sign-in-nav .navbar-brand {
+        font-size: 5vh;
+    }
+
+    .sign-in-nav .sign-up-wrapper {
+        margin-right: 75px;
+    }
+
+    .sign-in-grid {
+        display: flex;
+
+    }
+
+
+    .sign-in-grid .img-sign-in {
+        width: 500px;
+        height: auto;
+        /* z-index: -999 !important; */
+    }
+
+    .sign-in-grid .img-sign-in img {
+        transform: translateX(-400px);
+    }
+
+    .sign-in-grid .img-sign-in .overlay {
+        height: 100%;
+        z-index: 1;
+    }
+
+    .sign-in-grid .sign-in-wrapper {
+        width: 40%;
+        margin: 0 auto;
+
+    }
+
+    .sign-in-grid .sign-in-wrapper .login-title {
+        font-size: 4vh;
+        text-align: left;
+        margin-top: 40px;
+    }
+
+    .sign-in-grid .sign-in-wrapper .form-wrapper {
+        margin: 0;
+    }
+
+    .sign-in-grid .sign-in-wrapper .form-wrapper label {
+        font-size: 3vh;
+    }
+
+    .sign-in-grid .sign-in-wrapper .btn-sign-in {
+        margin: 0;
+    }
+
+    .overlay .text {
+
+        width: 80%;
+        left: 50px;
+        display: block;
+        padding: 30px;
+        position: absolute;
+        bottom: 20%;
+        text-align: center;
+
+    }
+
+    .overlay .text h1 {
+        font-size: 25px;
+        font-weight: 600;
+
+    }
+
+    .overlay .text p {
+        margin-top: 30px;
+        font-size: 18px;
+        font-weight: 300;
+    }
+
+    .text .btn-sign-up {
+        display: inline-block;
+        margin-top: 20px;
+        background: none;
+        border: 1px solid #DFDFDF;
+        padding: 10px 15px;
+        border-radius: 20px;
+        color: #DFDFDF;
+        font-weight: 500;
+        transition: .4s all ease;
+        cursor: pointer;
+
+    }
+
+    .text .btn-sign-up:hover {
+        background: #DFDFDF !important;
+        color: #091930 !important;
+    }
+
+
+
+    .sign-in-grid .sign-in-wrapper .back {
+        text-align: center;
+        margin-top: 180px;
+        float: right;
+    }
+
+    /* Sign In Page */
 
 
 }
